[tool.poetry]
name = "hb-exchange"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.22.0"
pydantic = "^1.9.0"
loguru = "^0.6.0"
devtools = "^0.8.0"
pendulum = "^2.1.2"
ccxt = "^1.73.12"
python-dotenv = "^0.19.2"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
